test/fail/integration/_fail_grammar_cond_1.hs
x :: Int
x = if a then 1 else 2
main = print "hello"